[gd_scene load_steps=36 format=2]

[ext_resource path="res://InterfaceJoueur/haut_enfonce.png" type="Texture" id=1]
[ext_resource path="res://InterfaceJoueur/gauche_enfonce.png" type="Texture" id=2]
[ext_resource path="res://InterfaceJoueur/droite.png" type="Texture" id=3]
[ext_resource path="res://InterfaceJoueur/droite_enfonce.png" type="Texture" id=4]
[ext_resource path="res://InterfaceJoueur/haut.png" type="Texture" id=5]
[ext_resource path="res://InterfaceJoueur/gauche.png" type="Texture" id=6]
[ext_resource path="res://hp/barre/lifebar_bg.png" type="Texture" id=7]
[ext_resource path="res://hp/barre/lifebar_fill.png" type="Texture" id=8]
[ext_resource path="res://hp/globe/globevitre.png" type="Texture" id=9]
[ext_resource path="res://InterfaceJoueur/Tir_enfonce.png" type="Texture" id=10]
[ext_resource path="res://InterfaceJoueur/Tir.png" type="Texture" id=11]
[ext_resource path="res://InterfaceJoueur/bas.png" type="Texture" id=12]
[ext_resource path="res://sounds/bullet.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/Animae-Mundi.mp3" type="AudioStream" id=14]
[ext_resource path="res://sounds/explode.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=16]
[ext_resource path="res://scene/georges.gd" type="Script" id=17]
[ext_resource path="res://sounds/walk.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/die.wav" type="AudioStream" id=19]
[ext_resource path="res://scene/anim.png" type="Texture" id=20]
[ext_resource path="res://InterfaceJoueur/bas_enfonce.png" type="Texture" id=21]

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=13]
resource_name = "echelle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 17 ]
}

[sub_resource type="Animation" id=15]
resource_name = "echelle_down"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=19]
resource_name = "echelle_transition"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 0.4
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump_att"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump_att2"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump_down"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump_max"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=10]
resource_name = "jump_up"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.8
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 12, 60.5 )

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 13 )

[sub_resource type="CapsuleShape2D" id=20]
height = 118.0

[node name="Georges" type="KinematicBody2D" groups=["Player"]]
position = Vector2( 450, -392 )
collision_mask = 334
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 9 )
scale = Vector2( 0.502835, 0.522676 )
texture = ExtResource( 20 )
hframes = 8
vframes = 5
frame = 1

[node name="Anim" type="AnimationPlayer" parent="Sprite" groups=["Ladder"]]
pause_mode = 2
root_node = NodePath("../..")
anims/RESET = SubResource( 18 )
anims/echelle = SubResource( 13 )
anims/echelle_down = SubResource( 15 )
anims/echelle_transition = SubResource( 19 )
anims/idle = SubResource( 11 )
anims/jump_att = SubResource( 6 )
anims/jump_att2 = SubResource( 7 )
anims/jump_down = SubResource( 8 )
anims/jump_max = SubResource( 9 )
anims/jump_up = SubResource( 10 )
anims/walk = SubResource( 5 )

[node name="TurnAxis" type="Position2D" parent="."]
position = Vector2( 1.90735e-06, 4 )
rotation = 0.785398

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
position = Vector2( 39.598, 9.8995 )

[node name="HPBar" type="TextureProgress" parent="."]
margin_left = -30.0
margin_top = -63.0
margin_right = 44.0
margin_bottom = -51.0
value = 100.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 8 )
fill_mode = 1
tint_under = Color( 0.0862745, 0.0823529, 0.0823529, 1 )
tint_progress = Color( 0.992157, 0.0156863, 0.0156863, 1 )
nine_patch_stretch = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -7, -18 )
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 11, 14.5 )
shape = SubResource( 16 )

[node name="sounds" type="Node2D" parent="."]
position = Vector2( 21, -13 )

[node name="bullet" type="AudioStreamPlayer" parent="sounds"]
stream = SubResource( 3 )

[node name="music" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 14 )
mix_target = 1

[node name="explode" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 15 )

[node name="die" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 19 )

[node name="jump" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 16 )

[node name="walk" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 18 )
pitch_scale = 2.13
stream_paused = true

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Gamepad" type="Node2D" parent="Hud"]

[node name="Left" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 10, 1650 )
scale = Vector2( 1.66667, 1.66667 )
normal = ExtResource( 6 )
pressed = ExtResource( 2 )
action = "ui_left"

[node name="Right" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 259, 1644 )
scale = Vector2( 1.71111, 1.71111 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
action = "ui_right"

[node name="Jump" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 123, 1530 )
scale = Vector2( 1.84444, 1.68889 )
normal = ExtResource( 5 )
pressed = ExtResource( 1 )
action = "ui_jump"

[node name="Tir" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 823, 1595 )
scale = Vector2( 2.19149, 2.19149 )
normal = ExtResource( 11 )
pressed = ExtResource( 10 )

[node name="down" type="TouchScreenButton" parent="Hud/Gamepad"]
position = Vector2( 132, 1765 )
scale = Vector2( 1.81111, 1.61111 )
normal = ExtResource( 12 )
pressed = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 11 )
shape = SubResource( 20 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="Hud/Gamepad/Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Hud/Gamepad/Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Hud/Gamepad/Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Hud/Gamepad/Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Hud/Gamepad/Jump" to="." method="_on_Jump_pressed"]
[connection signal="released" from="Hud/Gamepad/Jump" to="." method="_on_Jump_released"]
[connection signal="pressed" from="Hud/Gamepad/Tir" to="." method="_on_Tir_pressed"]
[connection signal="released" from="Hud/Gamepad/Tir" to="." method="_on_Tir_released"]
[connection signal="pressed" from="Hud/Gamepad/down" to="." method="_on_down_pressed"]
[connection signal="released" from="Hud/Gamepad/down" to="." method="_on_down_released"]
